[gd_scene load_steps=3 format=3 uid="uid://6unx1gwt4ccy"]

[ext_resource type="Script" path="res://framework/interfaces/widgets/text_list_adapter.gd" id="1_lxpdv"]
[ext_resource type="Script" path="res://tests/test_5.gd" id="1_qcspj"]

[node name="test5" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qcspj")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextListAdapter" type="Node" parent="ScrollContainer" node_paths=PackedStringArray("container")]
script = ExtResource("1_lxpdv")
container = NodePath("../VBoxContainer")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="item_clicked" from="ScrollContainer/TextListAdapter" to="." method="_on_text_list_adapter_item_clicked"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
